test-data/java-test-1/students/compile_fail/Main.java
public class Main {
    public static void main(String[] args) {
        This is not java code.
        This code will fail to compile.
        And it's a haiku.
    }
}
